fixed gap at the top of the disclaimer, also added black borderline to top - to match bottom.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,6 +39,8 @@ header.disclaimer {
   text-align: center;
   font-weight: bold;
   border-bottom: 2px solid #000;
+  border-top: 2px solid #000;
+  margin-top: -20px;
 }
 
 /* logo styling */
